enabled doctests for pytest and fixed some failing tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,4 +7,5 @@ all_files  = 1
 upload-dir = docs/build/html
 
 [pytest]
-norecursedirs = .* build examples
+norecursedirs = .* build examples util
+addopts = --doctest-modules --ignore=setup.py --ignore=docs/conf.py
