Add a couple of hdfs tests and fix a few hdfs bugs

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,4 +8,7 @@ upload-dir = docs/build/html
 
 [pytest]
 norecursedirs = .* build examples util
-addopts = --doctest-modules --ignore=setup.py --ignore=docs/conf.py
+addopts = --ignore=setup.py --ignore=docs/conf.py -m 'not hadoop'
+#addopts = --doctest-modules --ignore=setup.py --ignore=docs/conf.py -m 'not hadoop'
+markers =
+    hadoop: mark a test as requiring a running hadoop cluster.
